# bevy_benchy

./: .gitignore  Cargo.toml  README.md  benchy.toml.example
patches/: average-all-frames-2.patch  average-all-frames.patch  more-logs.patch
src/: config.rs  main.rs
