[package]
name = "bevy_benchy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["serde_derive"] }
toml = "0.8.8"
